# moonlight-common-c

./: .gitmodules  CMakeLists.txt  appveyor.yml
nanors/: rs.c
src/: AudioStream.c  ControlStream.c  InputStream.c  Limelight-internal.h  Limelight.h  Misc.c  Platform.c  Platform.h  PlatformSockets.h  PlatformThreads.h  RtpAudioQueue.c  RtpAudioQueue.h  RtpVideoQueue.c  RtpVideoQueue.h  RtspConnection.c  RtspParser.c  VideoDepacketizer.c  VideoStream.c  rswrapper.c
tests/: CMakeLists.txt  TestPlatform.cpp
